@@ -2549,6 +2549,12 @@ weapon so aimed will never do hull damage unless it hits a mast.  This \
 skill must be used to re-aim the siege weapon every combat round.
 
 
+SKILL_MATH=<ABILITY>\
+Usage    : MATH [FORMULA]\n\r\
+Example  : math 10+3\n\r\
+Calculates the solution to a math problem.  Use +, -, / (for divide) \
+or * (for multiply).
+
 KRAKENFORM=<ABILITY>\
 Usage    : KRAKENFORM\n\r\
 Example  : krakenform\n\r\
